--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Aurelia</title>
+    <title>Prototype Download</title>
   </head>
-  <body aurelia-app="src/main">
+  <body prototype-app="src/main">
     <script src="scripts/system.js"></script>
     <script src="scripts/config-typescript.js"></script>
     <script src="scripts/aurelia-core.min.js"></script>
     <script>
-      System.import('aurelia-bootstrapper');
+      System.import('prototype-bootstrapper');
     </script>
   </body>
 </html>
